MODELINKS-87: Added delete kafka topic method