@@ -7,6 +7,8 @@ import static org.folio.spring.tools.kafka.KafkaUtils.getTenantTopicName;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
+
+import org.apache.kafka.clients.admin.KafkaAdminClient;
 import org.apache.kafka.clients.admin.NewTopic;
 import org.springframework.beans.factory.BeanFactory;
 import org.springframework.beans.factory.config.ConfigurableBeanFactory;
@@ -20,6 +22,7 @@ import org.springframework.stereotype.Service;
 public class KafkaAdminService {
 
   private final KafkaAdmin kafkaAdmin;
+  private final KafkaAdminClient kafkaAdminClient;
   private final BeanFactory beanFactory;
   private final KafkaListenerEndpointRegistry kafkaListenerEndpointRegistry;
   private final FolioKafkaProperties kafkaProperties;
@@ -42,6 +45,14 @@ public class KafkaAdminService {
     kafkaAdmin.initialize();
   }
 
+  public void deleteTopicsByTenant(String tenantId) {
+    List<String> topicsToDelete = kafkaProperties.getTopics().stream()
+                                                             .filter(t -> t.getName().contains("." + tenantId + "."))
+                                                             .map(FolioKafkaProperties.KafkaTopic::getName)
+                                                             .toList();
+    kafkaAdminClient.deleteTopics(topicsToDelete);
+  }
+
   /**
    * Restarts kafka event listeners in module.
    */
@@ -58,8 +69,7 @@ public class KafkaAdminService {
   private List<NewTopic> toTenantSpecificTopic(List<FolioKafkaProperties.KafkaTopic> localConfigTopics,
                                                String tenantId) {
     return localConfigTopics.stream()
-      .map(topic -> toKafkaTopic(topic, tenantId))
-      .collect(toList());
+      .map(topic -> toKafkaTopic(topic, tenantId)).toList();
   }
 
   private NewTopic toKafkaTopic(FolioKafkaProperties.KafkaTopic topic, String tenantId) {
